// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`search screen should render trends correctly 1`] = `
<SearchScreen
  hasSearched={false}
  loadingMoreSearchResults={false}
  loadingSearch={false}
  loadingTrends={false}
  navigation={
    Object {
      "state": Object {
        "params": Object {
          "data": "1",
        },
      },
    }
  }
  requestTrendsLoad={[Function]}
  searchKeyword=""
  searchResult={Object {}}
  trends={
    Array [
      Object {
        "name": "Sofía Herrera",
        "promoted_content": null,
        "query": "%22Sof%C3%ADa+Herrera%22",
        "tweet_volume": 11111,
        "url": "http://twitter.com/search?q=%22Sof%C3%ADa+Herrera%22",
      },
      Object {
        "name": "Sofía Herrera",
        "promoted_content": null,
        "query": "%22Sof%C3%ADa+Herrera%22",
        "tweet_volume": 11111,
        "url": "http://twitter.com/search?q=%22Sof%C3%ADa+Herrera%22",
      },
      Object {
        "name": "Sofía Herrera",
        "promoted_content": null,
        "query": "%22Sof%C3%ADa+Herrera%22",
        "tweet_volume": 11111,
        "url": "http://twitter.com/search?q=%22Sof%C3%ADa+Herrera%22",
      },
      Object {
        "name": "Sofía Herrera",
        "promoted_content": null,
        "query": "%22Sof%C3%ADa+Herrera%22",
        "tweet_volume": 11111,
        "url": "http://twitter.com/search?q=%22Sof%C3%ADa+Herrera%22",
      },
    ]
  }
>
  <Component
    style={
      Object {
        "backgroundColor": "#FFFF",
        "flex": 1,
      }
    }
  >
    <View
      style={
        Object {
          "backgroundColor": "#FFFF",
          "flex": 1,
        }
      }
    >
      <SearchForm
        animated={true}
        hasSearched={false}
        onReset={[Function]}
        onSearchInputTextChange={[Function]}
        onSubmit={[Function]}
        searchValue=""
      >
        <Component
          style={
            Object {
              "backgroundColor": "#FFFF",
              "flexDirection": "row",
              "height": 80,
              "justifyContent": "space-evenly",
              "paddingLeft": 5,
              "paddingRight": 5,
              "paddingTop": 17,
            }
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#FFFF",
                "flexDirection": "row",
                "height": 80,
                "justifyContent": "space-evenly",
                "paddingLeft": 5,
                "paddingRight": 5,
                "paddingTop": 17,
              }
            }
          >
            <Component
              style={
                Object {
                  "alignItems": "center",
                  "borderColor": "black",
                  "borderWidth": 1,
                  "flex": 0.65,
                  "flexDirection": "row",
                  "height": 40,
                  "justifyContent": "center",
                  "padding": 1,
                  "paddingLeft": 5,
                }
              }
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "borderColor": "black",
                    "borderWidth": 1,
                    "flex": 0.65,
                    "flexDirection": "row",
                    "height": 40,
                    "justifyContent": "center",
                    "padding": 1,
                    "paddingLeft": 5,
                  }
                }
              >
                <Icon
                  allowFontScaling={false}
                  color="#1183ff"
                  name="ios-search"
                  size={32}
                >
                  <Text
                    accessible={true}
                    allowFontScaling={true}
                    ellipsizeMode="tail"
                  >
                    <Text
                      accessible={true}
                      allowFontScaling={true}
                      ellipsizeMode="tail"
                    />
                  </Text>
                </Icon>
                <TextInput
                  allowFontScaling={true}
                  onChangeText={[Function]}
                  style={
                    Object {
                      "flex": 1,
                      "fontSize": 17,
                      "marginLeft": 3,
                      "padding": 5,
                    }
                  }
                  underlineColorAndroid="transparent"
                  value=""
                >
                  <TextInput
                    allowFontScaling={true}
                    onChangeText={[Function]}
                    style={
                      Object {
                        "flex": 1,
                        "fontSize": 17,
                        "marginLeft": 3,
                        "padding": 5,
                      }
                    }
                    underlineColorAndroid="transparent"
                    value=""
                  />
                </TextInput>
              </View>
            </Component>
            <AnimatedComponent
              onPress={[Function]}
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "#1FBFFF",
                    "borderRadius": 5,
                    "flex": 0.25,
                    "height": 40,
                    "justifyContent": "center",
                  },
                  Object {
                    "transform": Array [
                      Object {
                        "scale": 1,
                      },
                    ],
                  },
                ]
              }
            >
              <TouchableHighlight
                activeOpacity={0.85}
                delayPressOut={100}
                onPress={[Function]}
                style={
                  Object {
                    "alignItems": "center",
                    "backgroundColor": "#1FBFFF",
                    "borderRadius": 5,
                    "flex": 0.25,
                    "height": 40,
                    "justifyContent": "center",
                    "transform": Array [
                      Object {
                        "scale": 1,
                      },
                    ],
                  }
                }
                underlayColor="black"
              >
                <Component
                  accessible={true}
                  isTVSelectable={true}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#1FBFFF",
                      "borderRadius": 5,
                      "flex": 0.25,
                      "height": 40,
                      "justifyContent": "center",
                      "transform": Array [
                        Object {
                          "scale": 1,
                        },
                      ],
                    }
                  }
                >
                  <View
                    accessible={true}
                    isTVSelectable={true}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      Object {
                        "alignItems": "center",
                        "backgroundColor": "#1FBFFF",
                        "borderRadius": 5,
                        "flex": 0.25,
                        "height": 40,
                        "justifyContent": "center",
                        "transform": Array [
                          Object {
                            "scale": 1,
                          },
                        ],
                      }
                    }
                  >
                    <AnimatedComponent
                      style={
                        Array [
                          Object {
                            "color": "white",
                            "fontSize": 16,
                          },
                          Object {
                            "transform": Array [
                              Object {
                                "scale": 1,
                              },
                            ],
                          },
                        ]
                      }
                    >
                      <Text
                        accessible={true}
                        allowFontScaling={true}
                        ellipsizeMode="tail"
                        style={
                          Object {
                            "color": "white",
                            "fontSize": 16,
                            "transform": Array [
                              Object {
                                "scale": 1,
                              },
                            ],
                          }
                        }
                      >
                        <Text
                          accessible={true}
                          allowFontScaling={true}
                          ellipsizeMode="tail"
                          style={
                            Object {
                              "color": "white",
                              "fontSize": 16,
                              "transform": Array [
                                Object {
                                  "scale": 1,
                                },
                              ],
                            }
                          }
                        >
                           Search 
                        </Text>
                      </Text>
                    </AnimatedComponent>
                  </View>
                </Component>
              </TouchableHighlight>
            </AnimatedComponent>
          </View>
        </Component>
      </SearchForm>
      <Fade
        onDoneFadingOut={[Function]}
        visible={true}
      >
        <AnimatedComponent
          onDoneFadingOut={[Function]}
          style={
            Array [
              Object {
                "opacity": 0,
                "transform": Array [
                  Object {
                    "scale": 1.1,
                  },
                ],
              },
              undefined,
            ]
          }
        >
          <Component
            onDoneFadingOut={[Function]}
            style={
              Object {
                "opacity": 0,
                "transform": Array [
                  Object {
                    "scale": 1.1,
                  },
                ],
              }
            }
          >
            <View
              onDoneFadingOut={[Function]}
              style={
                Object {
                  "opacity": 0,
                  "transform": Array [
                    Object {
                      "scale": 1.1,
                    },
                  ],
                }
              }
            >
              <Component>
                <View>
                  <Text
                    accessible={true}
                    allowFontScaling={true}
                    ellipsizeMode="tail"
                    style={
                      Object {
                        "fontSize": 20,
                        "fontWeight": "bold",
                        "marginBottom": 15,
                        "marginLeft": 10,
                      }
                    }
                  >
                    <Text
                      accessible={true}
                      allowFontScaling={true}
                      ellipsizeMode="tail"
                      style={
                        Object {
                          "fontSize": 20,
                          "fontWeight": "bold",
                          "marginBottom": 15,
                          "marginLeft": 10,
                        }
                      }
                    >
                      Trends for you
                    </Text>
                  </Text>
                  <Component
                    style={
                      Object {
                        "backgroundColor": "#dddddd",
                        "height": 1,
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "backgroundColor": "#dddddd",
                          "height": 1,
                        }
                      }
                    />
                  </Component>
                  <TrendList
                    onItemPress={[Function]}
                    trends={
                      Array [
                        Object {
                          "name": "Sofía Herrera",
                          "promoted_content": null,
                          "query": "%22Sof%C3%ADa+Herrera%22",
                          "tweet_volume": 11111,
                          "url": "http://twitter.com/search?q=%22Sof%C3%ADa+Herrera%22",
                        },
                        Object {
                          "name": "Sofía Herrera",
                          "promoted_content": null,
                          "query": "%22Sof%C3%ADa+Herrera%22",
                          "tweet_volume": 11111,
                          "url": "http://twitter.com/search?q=%22Sof%C3%ADa+Herrera%22",
                        },
                        Object {
                          "name": "Sofía Herrera",
                          "promoted_content": null,
                          "query": "%22Sof%C3%ADa+Herrera%22",
                          "tweet_volume": 11111,
                          "url": "http://twitter.com/search?q=%22Sof%C3%ADa+Herrera%22",
                        },
                        Object {
                          "name": "Sofía Herrera",
                          "promoted_content": null,
                          "query": "%22Sof%C3%ADa+Herrera%22",
                          "tweet_volume": 11111,
                          "url": "http://twitter.com/search?q=%22Sof%C3%ADa+Herrera%22",
                        },
                      ]
                    }
                  >
                    <ScrollView>
                      <_class>
                        <RCTScrollView>
                          <Component>
                            <View>
                              <Trend
                                index={0}
                                key="0"
                                onPress={[Function]}
                                trend={
                                  Object {
                                    "name": "Sofía Herrera",
                                    "promoted_content": null,
                                    "query": "%22Sof%C3%ADa+Herrera%22",
                                    "tweet_volume": 11111,
                                    "url": "http://twitter.com/search?q=%22Sof%C3%ADa+Herrera%22",
                                  }
                                }
                              >
                                <TouchableHighlight
                                  activeOpacity={0.85}
                                  delayPressOut={100}
                                  key="t0"
                                  onPress={[Function]}
                                  underlayColor="#dddddd"
                                >
                                  <Component
                                    accessible={true}
                                    isTVSelectable={true}
                                    onResponderGrant={[Function]}
                                    onResponderMove={[Function]}
                                    onResponderRelease={[Function]}
                                    onResponderTerminate={[Function]}
                                    onResponderTerminationRequest={[Function]}
                                    onStartShouldSetResponder={[Function]}
                                    style={null}
                                  >
                                    <View
                                      accessible={true}
                                      isTVSelectable={true}
                                      onResponderGrant={[Function]}
                                      onResponderMove={[Function]}
                                      onResponderRelease={[Function]}
                                      onResponderTerminate={[Function]}
                                      onResponderTerminationRequest={[Function]}
                                      onStartShouldSetResponder={[Function]}
                                      style={null}
                                    >
                                      <Component
                                        key="0"
                                        style={
                                          Object {
                                            "borderBottomWidth": 1,
                                            "borderColor": "#ccc",
                                            "flexDirection": "row",
                                            "padding": 10,
                                          }
                                        }
                                      >
                                        <View
                                          style={
                                            Object {
                                              "borderBottomWidth": 1,
                                              "borderColor": "#ccc",
                                              "flexDirection": "row",
                                              "padding": 10,
                                            }
                                          }
                                        >
                                          <Component
                                            style={
                                              Object {
                                                "flex": 0.1,
                                                "paddingLeft": 7,
                                              }
                                            }
                                          >
                                            <View
                                              style={
                                                Object {
                                                  "flex": 0.1,
                                                  "paddingLeft": 7,
                                                }
                                              }
                                            >
                                              <Text
                                                accessible={true}
                                                allowFontScaling={true}
                                                ellipsizeMode="tail"
                                                key="#0"
                                                style={
                                                  Object {
                                                    "color": "grey",
                                                    "fontSize": 18,
                                                  }
                                                }
                                              >
                                                <Text
                                                  accessible={true}
                                                  allowFontScaling={true}
                                                  ellipsizeMode="tail"
                                                  style={
                                                    Object {
                                                      "color": "grey",
                                                      "fontSize": 18,
                                                    }
                                                  }
                                                >
                                                  1
                                                </Text>
                                              </Text>
                                            </View>
                                          </Component>
                                          <Component
                                            style={
                                              Object {
                                                "flex": 0.9,
                                                "paddingLeft": 10,
                                              }
                                            }
                                          >
                                            <View
                                              style={
                                                Object {
                                                  "flex": 0.9,
                                                  "paddingLeft": 10,
                                                }
                                              }
                                            >
                                              <Text
                                                accessible={true}
                                                allowFontScaling={true}
                                                ellipsizeMode="tail"
                                                key="0Name"
                                                style={
                                                  Object {
                                                    "fontSize": 17,
                                                    "marginBottom": 5,
                                                  }
                                                }
                                              >
                                                <Text
                                                  accessible={true}
                                                  allowFontScaling={true}
                                                  ellipsizeMode="tail"
                                                  style={
                                                    Object {
                                                      "fontSize": 17,
                                                      "marginBottom": 5,
                                                    }
                                                  }
                                                >
                                                  Sofía Herrera
                                                </Text>
                                              </Text>
                                              <Text
                                                accessible={true}
                                                allowFontScaling={true}
                                                ellipsizeMode="tail"
                                                style={
                                                  Object {
                                                    "color": "grey",
                                                    "fontSize": 15,
                                                  }
                                                }
                                              >
                                                <Text
                                                  accessible={true}
                                                  allowFontScaling={true}
                                                  ellipsizeMode="tail"
                                                  style={
                                                    Object {
                                                      "color": "grey",
                                                      "fontSize": 15,
                                                    }
                                                  }
                                                >
                                                  11111
                                                   Tweets
                                                </Text>
                                              </Text>
                                            </View>
                                          </Component>
                                        </View>
                                      </Component>
                                    </View>
                                  </Component>
                                </TouchableHighlight>
                              </Trend>
                              <Trend
                                index={1}
                                key="1"
                                onPress={[Function]}
                                trend={
                                  Object {
                                    "name": "Sofía Herrera",
                                    "promoted_content": null,
                                    "query": "%22Sof%C3%ADa+Herrera%22",
                                    "tweet_volume": 11111,
                                    "url": "http://twitter.com/search?q=%22Sof%C3%ADa+Herrera%22",
                                  }
                                }
                              >
                                <TouchableHighlight
                                  activeOpacity={0.85}
                                  delayPressOut={100}
                                  key="t1"
                                  onPress={[Function]}
                                  underlayColor="#dddddd"
                                >
                                  <Component
                                    accessible={true}
                                    isTVSelectable={true}
                                    onResponderGrant={[Function]}
                                    onResponderMove={[Function]}
                                    onResponderRelease={[Function]}
                                    onResponderTerminate={[Function]}
                                    onResponderTerminationRequest={[Function]}
                                    onStartShouldSetResponder={[Function]}
                                    style={null}
                                  >
                                    <View
                                      accessible={true}
                                      isTVSelectable={true}
                                      onResponderGrant={[Function]}
                                      onResponderMove={[Function]}
                                      onResponderRelease={[Function]}
                                      onResponderTerminate={[Function]}
                                      onResponderTerminationRequest={[Function]}
                                      onStartShouldSetResponder={[Function]}
                                      style={null}
                                    >
                                      <Component
                                        key="1"
                                        style={
                                          Object {
                                            "borderBottomWidth": 1,
                                            "borderColor": "#ccc",
                                            "flexDirection": "row",
                                            "padding": 10,
                                          }
                                        }
                                      >
                                        <View
                                          style={
                                            Object {
                                              "borderBottomWidth": 1,
                                              "borderColor": "#ccc",
                                              "flexDirection": "row",
                                              "padding": 10,
                                            }
                                          }
                                        >
                                          <Component
                                            style={
                                              Object {
                                                "flex": 0.1,
                                                "paddingLeft": 7,
                                              }
                                            }
                                          >
                                            <View
                                              style={
                                                Object {
                                                  "flex": 0.1,
                                                  "paddingLeft": 7,
                                                }
                                              }
                                            >
                                              <Text
                                                accessible={true}
                                                allowFontScaling={true}
                                                ellipsizeMode="tail"
                                                key="#1"
                                                style={
                                                  Object {
                                                    "color": "grey",
                                                    "fontSize": 18,
                                                  }
                                                }
                                              >
                                                <Text
                                                  accessible={true}
                                                  allowFontScaling={true}
                                                  ellipsizeMode="tail"
                                                  style={
                                                    Object {
                                                      "color": "grey",
                                                      "fontSize": 18,
                                                    }
                                                  }
                                                >
                                                  2
                                                </Text>
                                              </Text>
                                            </View>
                                          </Component>
                                          <Component
                                            style={
                                              Object {
                                                "flex": 0.9,
                                                "paddingLeft": 10,
                                              }
                                            }
                                          >
                                            <View
                                              style={
                                                Object {
                                                  "flex": 0.9,
                                                  "paddingLeft": 10,
                                                }
                                              }
                                            >
                                              <Text
                                                accessible={true}
                                                allowFontScaling={true}
                                                ellipsizeMode="tail"
                                                key="1Name"
                                                style={
                                                  Object {
                                                    "fontSize": 17,
                                                    "marginBottom": 5,
                                                  }
                                                }
                                              >
                                                <Text
                                                  accessible={true}
                                                  allowFontScaling={true}
                                                  ellipsizeMode="tail"
                                                  style={
                                                    Object {
                                                      "fontSize": 17,
                                                      "marginBottom": 5,
                                                    }
                                                  }
                                                >
                                                  Sofía Herrera
                                                </Text>
                                              </Text>
                                              <Text
                                                accessible={true}
                                                allowFontScaling={true}
                                                ellipsizeMode="tail"
                                                style={
                                                  Object {
                                                    "color": "grey",
                                                    "fontSize": 15,
                                                  }
                                                }
                                              >
                                                <Text
                                                  accessible={true}
                                                  allowFontScaling={true}
                                                  ellipsizeMode="tail"
                                                  style={
                                                    Object {
                                                      "color": "grey",
                                                      "fontSize": 15,
                                                    }
                                                  }
                                                >
                                                  11111
                                                   Tweets
                                                </Text>
                                              </Text>
                                            </View>
                                          </Component>
                                        </View>
                                      </Component>
                                    </View>
                                  </Component>
                                </TouchableHighlight>
                              </Trend>
                              <Trend
                                index={2}
                                key="2"
                                onPress={[Function]}
                                trend={
                                  Object {
                                    "name": "Sofía Herrera",
                                    "promoted_content": null,
                                    "query": "%22Sof%C3%ADa+Herrera%22",
                                    "tweet_volume": 11111,
                                    "url": "http://twitter.com/search?q=%22Sof%C3%ADa+Herrera%22",
                                  }
                                }
                              >
                                <TouchableHighlight
                                  activeOpacity={0.85}
                                  delayPressOut={100}
                                  key="t2"
                                  onPress={[Function]}
                                  underlayColor="#dddddd"
                                >
                                  <Component
                                    accessible={true}
                                    isTVSelectable={true}
                                    onResponderGrant={[Function]}
                                    onResponderMove={[Function]}
                                    onResponderRelease={[Function]}
                                    onResponderTerminate={[Function]}
                                    onResponderTerminationRequest={[Function]}
                                    onStartShouldSetResponder={[Function]}
                                    style={null}
                                  >
                                    <View
                                      accessible={true}
                                      isTVSelectable={true}
                                      onResponderGrant={[Function]}
                                      onResponderMove={[Function]}
                                      onResponderRelease={[Function]}
                                      onResponderTerminate={[Function]}
                                      onResponderTerminationRequest={[Function]}
                                      onStartShouldSetResponder={[Function]}
                                      style={null}
                                    >
                                      <Component
                                        key="2"
                                        style={
                                          Object {
                                            "borderBottomWidth": 1,
                                            "borderColor": "#ccc",
                                            "flexDirection": "row",
                                            "padding": 10,
                                          }
                                        }
                                      >
                                        <View
                                          style={
                                            Object {
                                              "borderBottomWidth": 1,
                                              "borderColor": "#ccc",
                                              "flexDirection": "row",
                                              "padding": 10,
                                            }
                                          }
                                        >
                                          <Component
                                            style={
                                              Object {
                                                "flex": 0.1,
                                                "paddingLeft": 7,
                                              }
                                            }
                                          >
                                            <View
                                              style={
                                                Object {
                                                  "flex": 0.1,
                                                  "paddingLeft": 7,
                                                }
                                              }
                                            >
                                              <Text
                                                accessible={true}
                                                allowFontScaling={true}
                                                ellipsizeMode="tail"
                                                key="#2"
                                                style={
                                                  Object {
                                                    "color": "grey",
                                                    "fontSize": 18,
                                                  }
                                                }
                                              >
                                                <Text
                                                  accessible={true}
                                                  allowFontScaling={true}
                                                  ellipsizeMode="tail"
                                                  style={
                                                    Object {
                                                      "color": "grey",
                                                      "fontSize": 18,
                                                    }
                                                  }
                                                >
                                                  3
                                                </Text>
                                              </Text>
                                            </View>
                                          </Component>
                                          <Component
                                            style={
                                              Object {
                                                "flex": 0.9,
                                                "paddingLeft": 10,
                                              }
                                            }
                                          >
                                            <View
                                              style={
                                                Object {
                                                  "flex": 0.9,
                                                  "paddingLeft": 10,
                                                }
                                              }
                                            >
                                              <Text
                                                accessible={true}
                                                allowFontScaling={true}
                                                ellipsizeMode="tail"
                                                key="2Name"
                                                style={
                                                  Object {
                                                    "fontSize": 17,
                                                    "marginBottom": 5,
                                                  }
                                                }
                                              >
                                                <Text
                                                  accessible={true}
                                                  allowFontScaling={true}
                                                  ellipsizeMode="tail"
                                                  style={
                                                    Object {
                                                      "fontSize": 17,
                                                      "marginBottom": 5,
                                                    }
                                                  }
                                                >
                                                  Sofía Herrera
                                                </Text>
                                              </Text>
                                              <Text
                                                accessible={true}
                                                allowFontScaling={true}
                                                ellipsizeMode="tail"
                                                style={
                                                  Object {
                                                    "color": "grey",
                                                    "fontSize": 15,
                                                  }
                                                }
                                              >
                                                <Text
                                                  accessible={true}
                                                  allowFontScaling={true}
                                                  ellipsizeMode="tail"
                                                  style={
                                                    Object {
                                                      "color": "grey",
                                                      "fontSize": 15,
                                                    }
                                                  }
                                                >
                                                  11111
                                                   Tweets
                                                </Text>
                                              </Text>
                                            </View>
                                          </Component>
                                        </View>
                                      </Component>
                                    </View>
                                  </Component>
                                </TouchableHighlight>
                              </Trend>
                              <Trend
                                index={3}
                                key="3"
                                onPress={[Function]}
                                trend={
                                  Object {
                                    "name": "Sofía Herrera",
                                    "promoted_content": null,
                                    "query": "%22Sof%C3%ADa+Herrera%22",
                                    "tweet_volume": 11111,
                                    "url": "http://twitter.com/search?q=%22Sof%C3%ADa+Herrera%22",
                                  }
                                }
                              >
                                <TouchableHighlight
                                  activeOpacity={0.85}
                                  delayPressOut={100}
                                  key="t3"
                                  onPress={[Function]}
                                  underlayColor="#dddddd"
                                >
                                  <Component
                                    accessible={true}
                                    isTVSelectable={true}
                                    onResponderGrant={[Function]}
                                    onResponderMove={[Function]}
                                    onResponderRelease={[Function]}
                                    onResponderTerminate={[Function]}
                                    onResponderTerminationRequest={[Function]}
                                    onStartShouldSetResponder={[Function]}
                                    style={null}
                                  >
                                    <View
                                      accessible={true}
                                      isTVSelectable={true}
                                      onResponderGrant={[Function]}
                                      onResponderMove={[Function]}
                                      onResponderRelease={[Function]}
                                      onResponderTerminate={[Function]}
                                      onResponderTerminationRequest={[Function]}
                                      onStartShouldSetResponder={[Function]}
                                      style={null}
                                    >
                                      <Component
                                        key="3"
                                        style={
                                          Object {
                                            "borderBottomWidth": 1,
                                            "borderColor": "#ccc",
                                            "flexDirection": "row",
                                            "padding": 10,
                                          }
                                        }
                                      >
                                        <View
                                          style={
                                            Object {
                                              "borderBottomWidth": 1,
                                              "borderColor": "#ccc",
                                              "flexDirection": "row",
                                              "padding": 10,
                                            }
                                          }
                                        >
                                          <Component
                                            style={
                                              Object {
                                                "flex": 0.1,
                                                "paddingLeft": 7,
                                              }
                                            }
                                          >
                                            <View
                                              style={
                                                Object {
                                                  "flex": 0.1,
                                                  "paddingLeft": 7,
                                                }
                                              }
                                            >
                                              <Text
                                                accessible={true}
                                                allowFontScaling={true}
                                                ellipsizeMode="tail"
                                                key="#3"
                                                style={
                                                  Object {
                                                    "color": "grey",
                                                    "fontSize": 18,
                                                  }
                                                }
                                              >
                                                <Text
                                                  accessible={true}
                                                  allowFontScaling={true}
                                                  ellipsizeMode="tail"
                                                  style={
                                                    Object {
                                                      "color": "grey",
                                                      "fontSize": 18,
                                                    }
                                                  }
                                                >
                                                  4
                                                </Text>
                                              </Text>
                                            </View>
                                          </Component>
                                          <Component
                                            style={
                                              Object {
                                                "flex": 0.9,
                                                "paddingLeft": 10,
                                              }
                                            }
                                          >
                                            <View
                                              style={
                                                Object {
                                                  "flex": 0.9,
                                                  "paddingLeft": 10,
                                                }
                                              }
                                            >
                                              <Text
                                                accessible={true}
                                                allowFontScaling={true}
                                                ellipsizeMode="tail"
                                                key="3Name"
                                                style={
                                                  Object {
                                                    "fontSize": 17,
                                                    "marginBottom": 5,
                                                  }
                                                }
                                              >
                                                <Text
                                                  accessible={true}
                                                  allowFontScaling={true}
                                                  ellipsizeMode="tail"
                                                  style={
                                                    Object {
                                                      "fontSize": 17,
                                                      "marginBottom": 5,
                                                    }
                                                  }
                                                >
                                                  Sofía Herrera
                                                </Text>
                                              </Text>
                                              <Text
                                                accessible={true}
                                                allowFontScaling={true}
                                                ellipsizeMode="tail"
                                                style={
                                                  Object {
                                                    "color": "grey",
                                                    "fontSize": 15,
                                                  }
                                                }
                                              >
                                                <Text
                                                  accessible={true}
                                                  allowFontScaling={true}
                                                  ellipsizeMode="tail"
                                                  style={
                                                    Object {
                                                      "color": "grey",
                                                      "fontSize": 15,
                                                    }
                                                  }
                                                >
                                                  11111
                                                   Tweets
                                                </Text>
                                              </Text>
                                            </View>
                                          </Component>
                                        </View>
                                      </Component>
                                    </View>
                                  </Component>
                                </TouchableHighlight>
                              </Trend>
                            </View>
                          </Component>
                        </RCTScrollView>
                      </_class>
                    </ScrollView>
                  </TrendList>
                </View>
              </Component>
            </View>
          </Component>
        </AnimatedComponent>
      </Fade>
    </View>
  </Component>
</SearchScreen>
`;

exports[`search screen should render trends correctly when wrapped with redux 1`] = `
<Connect(SearchScreen)
  hasSearched={false}
  loadingMoreSearchResults={false}
  loadingSearch={false}
  loadingTrends={false}
  navigation={
    Object {
      "state": Object {
        "params": Object {
          "data": "1",
        },
      },
    }
  }
  requestTrendsLoad={[Function]}
  searchKeyword=""
  searchResult={Object {}}
  store={
    Object {
      "@@observable": [Function],
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
  trends={
    Array [
      Object {
        "name": "Sofía Herrera",
        "promoted_content": null,
        "query": "%22Sof%C3%ADa+Herrera%22",
        "tweet_volume": 11111,
        "url": "http://twitter.com/search?q=%22Sof%C3%ADa+Herrera%22",
      },
      Object {
        "name": "Sofía Herrera",
        "promoted_content": null,
        "query": "%22Sof%C3%ADa+Herrera%22",
        "tweet_volume": 11111,
        "url": "http://twitter.com/search?q=%22Sof%C3%ADa+Herrera%22",
      },
      Object {
        "name": "Sofía Herrera",
        "promoted_content": null,
        "query": "%22Sof%C3%ADa+Herrera%22",
        "tweet_volume": 11111,
        "url": "http://twitter.com/search?q=%22Sof%C3%ADa+Herrera%22",
      },
      Object {
        "name": "Sofía Herrera",
        "promoted_content": null,
        "query": "%22Sof%C3%ADa+Herrera%22",
        "tweet_volume": 11111,
        "url": "http://twitter.com/search?q=%22Sof%C3%ADa+Herrera%22",
      },
    ]
  }
>
  <SearchScreen
    hasSearched={false}
    loadingMoreSearchResults={false}
    loadingSearch={false}
    loadingTrends={true}
    navigation={
      Object {
        "state": Object {
          "params": Object {
            "data": "1",
          },
        },
      }
    }
    requestSearchForPost={[Function]}
    requestSearchMorePost={[Function]}
    requestTrendsLoad={[Function]}
    resetPostSearch={[Function]}
    resetTrends={[Function]}
    searchKeyword=""
    searchResult={Array []}
    store={
      Object {
        "@@observable": [Function],
        "dispatch": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      }
    }
    storeSubscription={
      Subscription {
        "listeners": Object {
          "clear": [Function],
          "get": [Function],
          "notify": [Function],
          "subscribe": [Function],
        },
        "onStateChange": [Function],
        "parentSub": undefined,
        "store": Object {
          "@@observable": [Function],
          "dispatch": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        },
        "unsubscribe": [Function],
      }
    }
    trends={Array []}
  >
    <Component
      style={
        Object {
          "backgroundColor": "#FFFF",
          "flex": 1,
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "#FFFF",
            "flex": 1,
          }
        }
      >
        <SearchForm
          animated={true}
          hasSearched={false}
          onReset={[Function]}
          onSearchInputTextChange={[Function]}
          onSubmit={[Function]}
          searchValue=""
        >
          <Component
            style={
              Object {
                "backgroundColor": "#FFFF",
                "flexDirection": "row",
                "height": 80,
                "justifyContent": "space-evenly",
                "paddingLeft": 5,
                "paddingRight": 5,
                "paddingTop": 17,
              }
            }
          >
            <View
              style={
                Object {
                  "backgroundColor": "#FFFF",
                  "flexDirection": "row",
                  "height": 80,
                  "justifyContent": "space-evenly",
                  "paddingLeft": 5,
                  "paddingRight": 5,
                  "paddingTop": 17,
                }
              }
            >
              <Component
                style={
                  Object {
                    "alignItems": "center",
                    "borderColor": "black",
                    "borderWidth": 1,
                    "flex": 0.65,
                    "flexDirection": "row",
                    "height": 40,
                    "justifyContent": "center",
                    "padding": 1,
                    "paddingLeft": 5,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "borderColor": "black",
                      "borderWidth": 1,
                      "flex": 0.65,
                      "flexDirection": "row",
                      "height": 40,
                      "justifyContent": "center",
                      "padding": 1,
                      "paddingLeft": 5,
                    }
                  }
                >
                  <Icon
                    allowFontScaling={false}
                    color="#1183ff"
                    name="ios-search"
                    size={32}
                  >
                    <Text
                      accessible={true}
                      allowFontScaling={true}
                      ellipsizeMode="tail"
                    >
                      <Text
                        accessible={true}
                        allowFontScaling={true}
                        ellipsizeMode="tail"
                      />
                    </Text>
                  </Icon>
                  <TextInput
                    allowFontScaling={true}
                    onChangeText={[Function]}
                    style={
                      Object {
                        "flex": 1,
                        "fontSize": 17,
                        "marginLeft": 3,
                        "padding": 5,
                      }
                    }
                    underlineColorAndroid="transparent"
                    value=""
                  >
                    <TextInput
                      allowFontScaling={true}
                      onChangeText={[Function]}
                      style={
                        Object {
                          "flex": 1,
                          "fontSize": 17,
                          "marginLeft": 3,
                          "padding": 5,
                        }
                      }
                      underlineColorAndroid="transparent"
                      value=""
                    />
                  </TextInput>
                </View>
              </Component>
              <AnimatedComponent
                onPress={[Function]}
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#1FBFFF",
                      "borderRadius": 5,
                      "flex": 0.25,
                      "height": 40,
                      "justifyContent": "center",
                    },
                    Object {
                      "transform": Array [
                        Object {
                          "scale": 1,
                        },
                      ],
                    },
                  ]
                }
              >
                <TouchableHighlight
                  activeOpacity={0.85}
                  delayPressOut={100}
                  onPress={[Function]}
                  style={
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#1FBFFF",
                      "borderRadius": 5,
                      "flex": 0.25,
                      "height": 40,
                      "justifyContent": "center",
                      "transform": Array [
                        Object {
                          "scale": 1,
                        },
                      ],
                    }
                  }
                  underlayColor="black"
                >
                  <Component
                    accessible={true}
                    isTVSelectable={true}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      Object {
                        "alignItems": "center",
                        "backgroundColor": "#1FBFFF",
                        "borderRadius": 5,
                        "flex": 0.25,
                        "height": 40,
                        "justifyContent": "center",
                        "transform": Array [
                          Object {
                            "scale": 1,
                          },
                        ],
                      }
                    }
                  >
                    <View
                      accessible={true}
                      isTVSelectable={true}
                      onResponderGrant={[Function]}
                      onResponderMove={[Function]}
                      onResponderRelease={[Function]}
                      onResponderTerminate={[Function]}
                      onResponderTerminationRequest={[Function]}
                      onStartShouldSetResponder={[Function]}
                      style={
                        Object {
                          "alignItems": "center",
                          "backgroundColor": "#1FBFFF",
                          "borderRadius": 5,
                          "flex": 0.25,
                          "height": 40,
                          "justifyContent": "center",
                          "transform": Array [
                            Object {
                              "scale": 1,
                            },
                          ],
                        }
                      }
                    >
                      <AnimatedComponent
                        style={
                          Array [
                            Object {
                              "color": "white",
                              "fontSize": 16,
                            },
                            Object {
                              "transform": Array [
                                Object {
                                  "scale": 1,
                                },
                              ],
                            },
                          ]
                        }
                      >
                        <Text
                          accessible={true}
                          allowFontScaling={true}
                          ellipsizeMode="tail"
                          style={
                            Object {
                              "color": "white",
                              "fontSize": 16,
                              "transform": Array [
                                Object {
                                  "scale": 1,
                                },
                              ],
                            }
                          }
                        >
                          <Text
                            accessible={true}
                            allowFontScaling={true}
                            ellipsizeMode="tail"
                            style={
                              Object {
                                "color": "white",
                                "fontSize": 16,
                                "transform": Array [
                                  Object {
                                    "scale": 1,
                                  },
                                ],
                              }
                            }
                          >
                             Search 
                          </Text>
                        </Text>
                      </AnimatedComponent>
                    </View>
                  </Component>
                </TouchableHighlight>
              </AnimatedComponent>
            </View>
          </Component>
        </SearchForm>
        <Component
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#fff",
              "flex": 1,
              "justifyContent": "center",
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#fff",
                "flex": 1,
                "justifyContent": "center",
              }
            }
          >
            <ActivityIndicator
              animating={true}
              color="#999999"
              hidesWhenStopped={true}
              size="small"
            >
              <ActivityIndicator
                animating={true}
                color="#999999"
                hidesWhenStopped={true}
                size="small"
              />
            </ActivityIndicator>
          </View>
        </Component>
      </View>
    </Component>
  </SearchScreen>
</Connect(SearchScreen)>
`;
